--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ dist-ssr
 *.sln
 *.sw?
 .env
+
+# ✅ Added for backend AI training
+/backend/.venv
+/backend/checkpoints/
+/backend/uploads/
+/backend/exports/
