--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,1 +1,17 @@
+# Use official lightweight Python image
+FROM python:3.10-slim
 
+# Set working directory inside container
+WORKDIR /app
+
+# Copy backend files into container
+COPY . /app
+
+# Install dependencies
+RUN pip install --upgrade pip && pip install -r requirements.txt
+
+# Expose FastAPI port
+EXPOSE 8000
+
+# Start FastAPI server
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
