--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,12 @@
-
+version: '3.8'
+services:
+  backend:
+    build: ./backend
+    volumes:
+      - ./backend/uploads:/app/uploads
+      - ./backend/checkpoints:/app/checkpoints
+      - ./backend/exports:/app/exports
+    ports:
+      - "8000:8000"
+    environment:
+      - ADMIN_TOKEN=changeme
